# claude-guardian-agents

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  AGENT-UPDATE-TEMPLATE.md  AGENTS-registry.md  AGENTS-relationships.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE-NAMING-CONVENTION.md  ENTERPRISE-COMPLETE-STRUCTURE.md  GEMINI.md  Makefile  NAMING-CONVENTION.md  README-INSTALLATION.md  README.md  REDUNDANCY_ANALYSIS_REQUEST.md  RESEARCH-PAPERS.md  REVISED-NAMING-CONVENTION.md  activate-env.sh  commit_message.txt  git_commit_message.txt  guardian-manager.sh  install-guardian-agents.sh  install.sh  issues_to_fix.md  manifest.json  pyproject.toml  update-guardian-agents.sh  validation-report.md
.claude/agents/: 1-analytical  1-coo-office  1-cto-office  1-product-management  2-creative  2-product-design  2-security-operations  2-software-engineering  3-data-operations  3-human-centered  3-quality-engineering  4-devops-engineering  4-it-operations  4-unconventional  5-compliance-operations  THINK-TANK-DESIGN.md  codebase-complexity-analyzer.md  minimal-todo-fixer.md
.github/workflows/: auto-merge-docs.yml
1-product/1-product-management/: 001-strategy-product-leadership-guardian.md  cpo-guardian.md
1-product/2-product-design/: 021-design-product-leadership-guardian.md
2-engineering/1-cto-office/: 041-architecture-cto-leadership-guardian.md  042-architecture-technical-fellow-guardian.md  tfe-guardian.md
2-engineering/2-software-engineering/: 043-architecture-vp-engineering-guardian.md
2-engineering/3-quality-engineering/: 071-development-quality-director-guardian.md  072-development-quality-senior-guardian.md  073-development-quality-junior-guardian.md  sqe-guardian.md
2-engineering/4-devops-engineering/: 081-infrastructure-devops-director-guardian.md  082-infrastructure-devops-senior-guardian.md  083-infrastructure-devops-junior-guardian.md  (+1 more)
4-think-tank/: 101-thinktank-physicist-first-principles-guardian.md  102-thinktank-anthropologist-human-patterns-guardian.md  103-thinktank-artist-lateral-creativity-guardian.md  107-thinktank-child-naive-simplicity-guardian.md  THINK-TANK-DESIGN.md
4-thinktank/: THINK-TANK-DESIGN.md
5-meta-agents/: architectural-orchestrator.md
docs/: AGENT-CREATION-GUIDE.md  AGENT-OPTIMIZATION-ANALYSIS.md  AGENT-REDUCTION-ANALYSIS.md  COMPLETE-PROGRESS-DOCUMENTATION.md  COMPREHENSIVE-DRY-RUN-2025-09-12.md  DOCS-REORG-TODO.md  DOCUMENTATION-COMPLETE.md  DRY-RUN-PROCESS.md  DRY-RUN-RESULTS.md  ENHANCED-TEST-FRAMEWORK.md  GUARDIAN-PACKAGE-MANAGER.md  IMPLEMENTATION-VALIDATION.md  IMPLEMENTATION-VERIFICATION-REPORT.md  IMPROVEMENT-OPPORTUNITIES.md  ISSUE-INVESTIGATION-PLAN.md  MASTER_TODO.md  NAMING-CONVENTION.md  OUTSTANDING-ISSUES.md  PERSONALITY-COLLABORATION-PATTERNS.md  PHASE-2-IMPLEMENTATION-STATUS.md  PHASE-2-RESEARCH-ANALYSIS.md  PHASE-3-BATCH-UPDATES.md  PHASE-3-STATUS.md  PROJECT-MANAGEMENT-SYSTEM.md  PROJECT-STATUS.md  README.md  REFACTORING_TODO.md  RESEARCH-DOCUMENTATION-TODO.md  RESEARCH-MAPPING-STATUS.md  RESEARCH-PAPERS.md  ROLES_SUMMARY.md  THINK-TANK-COMPLETION-SUMMARY.md  THINK-TANK-IMPLEMENTATION-LOG.md  URL  USAGE_AND_WORKFLOW.md  api  config  contributing.md  spec-kit-integration.md  support.md  (+5 more)
guardians/: 001-data-processing-data-validation-guardian.md
scripts/: add-svg-animations.py  batch-update-phase3.sh  diagnose-mcp-servers.sh  generate-custom-svgs.py  generate-manifest.py  generate-reports.py  gmp-functions-fixed.sh  gpm  gpm-lib.py  orchestrate-workflow.py  phase4-specialized.sh  phase4-update.sh  reorganize-svgs.py  run-track-progress.sh  setup-python-env.sh  track-progress.py  validate-agent-system.py  validate-gpm.sh  validate_docs.py
templates/: documentation-template.md  spec-kit-integration.yaml
tracking/: progress.json
(+149 files in other folders)
